--- a/style.css
+++ b/style.css
@@ -69,4 +69,512 @@
     font-weight: 900;
     font-style: italic;
   }
+
+  body{
+
+    margin: 0;
+    font-family: "Roboto", sans-serif;
+  }
+
+  .header-line{
+    background-color: #117050;
+    height: 10px;
+}
+
+.container{
+    
+  max-width: 1140px;
+  margin: auto;
+
+}
+
+.bar{
+  background-color: #117050;
+  width: 168px;
+  height: 22px;
+  margin-left: 150px;
+}
+
+h1{
+
+  font-size: 90px;
+  font-weight: bold;
+  line-height: 90px;
+  color: #117050;
+  padding-top: 90px;
+  padding-bottom: 90px;
+  margin-bottom: 30px;
+  
+}
+
+h2{
+
+  font-size: 30px;
+  font-weight: bold;
+  color: #117050;
+  line-height: 45px;
+  margin: 20px 0;
+  
+}
+
+.button{
+
+  display: inline-block;
+  border: 2px solid #454545;
+  padding: 10px 30px;
+  border-radius: 3px;
+  color: #454545;
+  text-decoration: none;
+  
+}
+
+.button:hover{
+  color: #ffffff;
+  background-color: #454545;
+}
+
+
+.header-area{
+
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  height: 100px;
+  
+}
+
+.header-left img{
+  width: 64px;
+  height: 64px;
+  margin-top: 15px;
+
+}
+
+.header-right{
+  display: flex;
+  align-items: center;
+}
+
+.header-search form{
+  display: flex;
+}
+
+.header-search input{
+  font-size: 16px;
+  padding: 10px 10px;
+  border: 1px solid #999999;
+  outline: 0;
+  max-width: 250px;
+}
+
+.header-search button{
+  border: 0;
+  background: transparent;
+  margin-left: -30px;
+  cursor: pointer;
+}
+
+.header-search img{
+  width: 16px;
+  height: 16px;
+}
+
+.header-menu{
+
+  margin-left: 50px;
+  cursor: pointer;
+
+}
+
+.header-menu img{
+  width: 24px;
+  height: 24px;
+}
+
+.banner{
+  background-position: center;
+  background-size: cover;
+}
+
+.banner-images{
+  margin-top: 60px;
+}
+
+.banner-images img{
+
+  width: 148px;
+  height: 148px;
+  border: 6px solid #117050;
+  border-radius: 50%;
+  margin-right: 30px;
+
+}
+
+.area1-content{
+
+  padding: 80px;
+}
+
+.area1-frase{
+  margin-bottom: 30px;
+
+}
+
+.area1-text{
+  margin-bottom: 50px;
+  line-height: 30px;
+}
+
+.area1-img1{
+
+  height: 350px;
+  background-image: url(../images/f2.jpg);
+  background-size: cover;
+  background-position: center;
+
+}
+
+.area1-img2{
+
+  grid-column: 2/3;
+  grid-row: 1/3;
+  background-image: url(../images/f1.jpg);
+  background-size: cover;
+  background-position: center;
+
+}
+
+.area2{
+
+  display: grid;
+  grid-template-columns: repeat(2,1fr);
+  margin-top: 30px;
+
+}
+
+.area2-content{
+
+  padding: 80px;
+}
+
+.area2-text{
+  margin-bottom: 50px;
+  line-height: 30px;
+}
+
+.botao-area2{
+  margin-left: 20px;
+}
+
+.area2--img1{
+
+  height: 450px;
+  background-image: url(../images/f4.jpg);
+  background-size: cover;
+  background-position: center;
+
+}
+
+.area2--img2{
+
+  grid-column: 1/2;
+  grid-row: 1/3;
+  background-image: url(../images/f3.jpg);
+  background-size: cover;
+  background-position: left;
+
+}
+
+.area3{
+
+  display: grid;
+  grid-template-columns: repeat(2,1fr);
+  margin-left: 50px;
+
+}
+
+.area3-content{
+
+  padding: 200 px 80px;
+  background-image: url(../images/bg2.jpg);
+  background-size: cover;
+  background-position: left;
+
+}
+
+.area3-title{
+  margin-left: 30px;
+}
+
+
+
+.area3-text{
+  margin-bottom: 50px;
+  line-height: 30px;
+  margin-left: 30px;
+}
+
+.area3-img1{
+
+  height: 600px;
+  background-image: url(../images/f5.jpg);
+  background-size: cover;
+  background-position: center;
+
+}
+
+.area3-imagem3{
+
+  margin-left: 20px;
+  margin-right: 50px;
+}
+
+.button-area3{
+
+  display: inline-block;
+  border: 2px solid #454545;
+  padding: 10px 30px;
+  border-radius: 3px;
+  color: #454545;
+  text-decoration: none;
+  margin-left: 250px;
+  
+}
+
+.button-area3:hover{
+  color: #ffffff;
+  background-color: #454545;
+}
+
+.botao-area3{
+  margin-left: 50px;
+
+}
+
+.area4{
+
+  display: grid;
+  grid-template-columns: repeat(2,1fr);
+  margin-left: 50px;
+
+}
+
+.area4-content{
+
+  padding: 200 px 80px;
+  background-image: url(../images/bg2.jpg);
+  background-size: cover;
+  background-position: left;
+  
+
+}
+
+.area3-title{
+  margin-left: 30px;
+}
+
+
+
+.area3-text{
+  margin-bottom: 50px;
+  line-height: 30px;
+  margin-left: 30px;
+}
+
+.area3-img1{
+
+  height: 600px;
+  background-image: url(../images/f5.jpg);
+  background-size: cover;
+  background-position: center;
+
+}
+
+.area4-imagem4{
+
+  margin-left: 20px;
+  margin-right: 50px;
+}
+
+.button-area4{
+
+  display: inline-block;
+  border: 2px solid #454545;
+  padding: 10px 30px;
+  border-radius: 3px;
+  color: #454545;
+  text-decoration: none;
+  margin-left: 250px;
+  margin-top: 20px;
+
+  
+}
+
+.button-area4:hover{
+  color: #ffffff;
+  background-color: #454545;
+}
+
+.botao-area4{
+  margin-left: 20px;
+  margin-top: 20px;
+
+}
+
+.area5{
+  background-image: url(../images/bg4.jpg);
+  background-size: cover;
+  background-position: center;
+  height: 600px;
+}
+
+footer{
+ 
+  
+  padding: 80px;
+  text-align: center;
+}
+
+form {
+  display: flex;
+  flex-direction: column;
+  margin-left: 30%;
+}
+
+.form-control {
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 1.5rem;
+  width: 50%;
+
+}
+
+label {
+  margin-bottom: 0.3rem;
+  font-weight: bold;
+  text-align: left;
+}
+
+input[type="text"],
+input[type="email"],
+textarea {
+  padding: 10px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  font-size: 16px;
+}
+
+.error-message {
+  color: #e21111;
+  margin-top: 5px;
+}
+
+button[type="submit"] {
+  background-color: #117050;
+  color: white;
+  padding: 0.7rem;
+  border: none;
+  border-radius: 5px;
+  font-size: 1.2rem;
+  cursor: pointer;
+  transition: 0.4s;
+  width: 50%;
+}
+
+button[type="submit"]:hover {
+  background-color: #36d443;
+}
+
+/* Estilo para inputs com erro */
+.form-control.error input,
+.form-control.error textarea {
+  border-color: #e21111;
+
+@media (min-width:759px) and (max-width:1140px){
+  .conteiner{
+      padding-left: 20px;
+      padding-right: 20px;
+  }
+
+  @media (min-width:426px) and (max-width:758px) {
+
+      .conteiner{
+          padding-left: 20px;
+          padding-right: 20px;
+      }
+
+      .area1{
+          grid-template-columns: 3fr 2fr;
+      }
+
+      .area1{
+          grid-template-columns: 2fr 3fr;
+      }
+
+      .area3{
+          grid-template-columns: 3fr 2fr;
+      }
+
+      .area4{
+          grid-template-columns: 3fr 2fr;
+      }
+      
+  }
+
+
+  @media (max-width:425px) {
+
+      .conteiner{
+          padding-left: 20px;
+          padding-right: 20px;
+      }
+
+      .header-menu{
+          margin-left: 20px;
+      }
+
+      .header-search input{
+          max-width: 80px;
+      }
+
+      h1{
+          font-size: 50px;
+          line-height: 50px;
+      }
+      h2{
+          font-size: 25px;
+          line-height: 30px;
+      }
+
+      .banner-images img{
+
+          width: 70px;
+          height: 70px;
+          border: 3px solid #117050;
+          border-radius: 50%;
+          margin-right: 30px;
+      
+      }
+
+      .area1,.area2,.area3,.area4{
+          grid-template-columns: 1fr;
+      }
+
+      .area1-content,.area2--content,.area3--content,.area4--content{
+          padding: 40px;
+      }
+
+      .area5{
+          height: 200px;
+      }
+
+      footer{
+          font-size: 12px;
+          padding: 20px 40px;
+      }
+  
+  }
+}
+
+}
   
